--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="senha">Senha</string>
     <string name="criar_conta">Criar conta</string>
     <string name="esqueceu_a_senha">Esqueceu a senha</string>
+    <string name="sair">SAIR</string>
 </resources>
