--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">LoginTest</string>
+    <string name="app_name">pil</string>
     <string name="entrar">ENTRAR</string>
     <string name="programa_de_incentivo_a_leitura">Programa de incentivo a leitura</string>
     <string name="email">Email</string>
@@ -9,10 +9,17 @@
     <string name="sair">SAIR</string>
     <string name="melhor_avaliados">Melhor avaliados</string>
     <string name="hero_image_description">Descrição do herói</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="conta">Conta</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="filter_options">
+        <item>Crescrente</item>
+        <item>Decrescrente</item>
+        <item>Mais lidos</item>
+        <item>Melhor avaliados</item>
+        <item>Nº páginas</item>
+    </string-array>
 </resources>
