adiciona a biometria no login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,14 +12,15 @@
     <string name="conta">Conta</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_home">Home</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="dialog_biometric_start">Deseja ativar a biometria</string>
+    <string name="dialog_biometric_negative">Não</string>
+    <string name="dialog_biometric_positive">Sim</string>
 
     <string-array name="filter_options">
         <item>Crescrente</item>
         <item>Decrescrente</item>
         <item>Mais lidos</item>
-        <item>Melhor avaliados</item>
+        <item>Avaliados</item>
         <item>Nº páginas</item>
     </string-array>
 </resources>
